--- a/calculator/style.css
+++ b/calculator/style.css
@@ -6,26 +6,50 @@
   font-weight: 1000;
 }
 
+:root {
+  --color-primary: #0a4040;
+  --color-primary-light: #0a4f4f;
+
+  --color-light: #f2ebdc;
+  --color-text: #0d0d0d;
+  --color-text-accent: var(--color-light);
+
+  --color-accent: #d97925;
+
+  --grad-main: linear-gradient(
+    45deg,
+    var(--color-primary),
+    var(--color-primary-light)
+  );
+
+  --border-soft: 1px solid var(--color-border);
+  --border-radius: 10px;
+  --box-shadow: 5px 5px 5px #0d0d0d55;
+}
+
 html {
   max-height: 100vh;
-  overflow: hidden;
+  overflow-y: hidden;
 }
 
 body {
-  background: #eee;
-  min-height: 100vh;
+  background: var(--color-bg);
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 main {
   width: 70vw;
-  max-width: 500px;
+  max-width: 450px;
   min-width: 200px;
-  min-height: 90vh;
+  min-height: 85vh;
   padding: 3%;
-  margin: 2% auto;
-  background: linear-gradient(45deg, #008, #00e);
-  box-shadow: 5px 5px 5px #0004;
-  border-radius: 10px;
+  background: var(--grad-main);
+  box-shadow: var(--box-shadow);
+  border-radius: 1em;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -35,28 +59,27 @@ main {
 .screen {
   width: 100%;
   height: 10vh;
-  background: #eee;
-  margin: 0 auto 10%;
-  border: solid 2px black;
-  border-radius: 10px;
-  box-shadow: 5px 5px 5px #0004;
+  background: var(--color-light);
+  color: var(--color-text);
+  border: var(--border-soft);
+  border-radius: var(--border-radius);
+  box-shadow: var(--box-shadow);
   text-align: right;
   font-size: 3em;
   display: flex;
   justify-content: flex-end;
   align-items: center;
   padding: 0 5%;
+  margin: 0.2em 0 1em;
 }
 
 .buttons {
   width: 100%;
-  color: #111;
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  gap: 5%;
-  margin: 20px auto 0;
+  gap: 0.5em;
 }
 
 .button {
@@ -66,8 +89,9 @@ main {
   height: 50px;
   margin: 10px 0;
   border: none;
-  border-radius: 5px;
-  box-shadow: 0 5px #000;
+  border-radius: var(--border-radius);
+  box-shadow: 0 4px 0 #0d0d0d55;
+  color: var(--color-text);
   transition: 0.2s;
   cursor: pointer;
 }
@@ -78,8 +102,8 @@ main {
 }
 
 .signal {
-  background: linear-gradient(45deg, #f00, #800);
-  color: #eee;
+  background: var(--color-accent);
+  color: var(--color-text-accent);
 }
 
 @media screen and (max-width: 860px) {
@@ -95,22 +119,33 @@ main {
 @media screen and (max-width: 670px) {
   main {
     width: 90vw;
+    padding: 2em;
   }
 }
 
 @media screen and (max-width: 490px) {
+  body {
+    display: block;
+    padding: 0;
+  }
+
   main {
+    background: #033030;
     width: 100vw;
     height: 100vh;
-    margin: 0;
+    margin: auto;
     border-radius: 0;
-    padding: 1%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
+
   .buttons {
-    gap: 2%;
+    gap: 0.2em;
     width: 90%;
   }
   .screen {
-    width: 90%;
+    width: 360px;
   }
 }
